<resources>
    <string name="app_name">SunmiCashierDemo</string>
    <string name="more_show_text">Show text</string>
    <string name="more_show_code_text">Show QR code + text</string>
    <string name="more_show_img">Show image</string>
    <string name="more_show_php">Show slides</string>
    <string name="more_show_video">Show video</string>
    <string name="more_show_videos">Show video carousel</string>
    <string name="more_show_menu">Show list</string>
    <string name="more_show_menu_img">Show list + image</string>
    <string name="more_show_menu_videos">Show list + video carousel</string>
    <string name="more_show_menu_php">Show list + image carousel</string>
    <string name="more_acquire_subinfo_main">Read hardware information from the main screen to determine size of customer screen</string>
    <string name="more_acquire_subinfo_sub">Read the model value from the customer screen to determine size of customer screen</string>
    <string name="more_clear_sub_path">Clear specify cache file of customer screen</string>
    <string name="more_clear_sub_file">Clear current application\'s cacdsdsdsddsadashed files on the customer screen</string>
    <string name="more_acquire_sub_path">Check customer screen specified cache directory size</string>
    <string name="more_clear_subcache">Clear all cache files on customer screen</string>
    <string name="more_open_sub_setting">Open the customer screen system settings</string>
    <string name="more_show_sub_property">View time, date, time zone, language settings of customer screen</string>
    <string name="more_print">Print a receipt</string>
    <string name="more_camera_qrcode">Scan</string>
    <string name="more_get_weight_result">Weight value</string>
    <string name="more_peeled">Removed tare successfully</string>
    <string name="more_unpeeled">Failed to remove tare</string>
    <string name="wx_pay">WeChat Pay</string>
    <string name="more_show_text_success">Show text successfully</string>
    <string name="more_show_text_fail">Show text failed</string>
    <string name="more_show_text_exception">Show text abnormally</string>
    <string name="more_send_code_success">Succeed to send QR code file</string>
    <string name="more_send_code_fail">Failed to send QR code file</string>
    <string name="more_show_code_text_success">Succeed to show QR code + text</string>
    <string name="more_show_code_text_fail">Failed to show QR code + text</string>
    <string name="more_acquire_subinfo_model">Get model info from main screen</string>
    <string name="more_acquire_subinfo_sub_model">Get model info from customer screen</string>
    <string name="more_clear_sub_file_success">Succeed to clear current application\'s cached files on customer screen</string>
    <string name="more_clear_sub_file_fail">Failed to clear current application\'s cached files on customer screen</string>
    <string name="more_clear_file_id_fail">Failed to delete the specified cache file ID</string>
    <string name="more_clear_file_id_result">Delete the result of the specified cache file ID</string>
    <string name="more_clear_subcache_success">Succeed to clear all cache files on customer screen</string>
    <string name="more_clear_subcache_fail">Failed to clear all cache files on customer screen</string>
    <string name="more_acquire_sub_path_size_byte">Number of bytes of all customer screen\'s cache file size</string>
    <string name="more_acquire_sub_path_size">Check specified cache directory size of the customer screen</string>
    <string name="more_send_img_success">Succeed to send images</string>
    <string name="more_send_img_fail">Failed to send image</string>
    <string name="more_send_allimg_success">Succeed to send all image files</string>
    <string name="more_send_allimg_fail">Failed to send all image files</string>
    <string name="more_send_video_success">Succeed to send all video files</string>
    <string name="more_send_video_fail">Failed to send all video files</string>
    <string name="more_show_menu_videos_success">Succeed to show video carousel + list</string>
    <string name="more_show_menu_videos_fail">Failed to show video carousel + list</string>
    <string name="more_show_menu_img_success">Succeed to show one image + list</string>
    <string name="more_show_menu_img_fail">Failed to show one image + list</string>
    <string name="more_send_single_img_success">Succeed to send single picture file</string>
    <string name="more_send_single_img_fail">Failed to send single picture file</string>
    <string name="more_show_single_img_success">Succeed to show single image</string>
    <string name="more_show_single_img_fail">Failed to show single image</string>
    <string name="more_send_allphp_success">Succeed to send all slide files</string>
    <string name="more_send_single_video_success">Succeed to send single video file</string>
    <string name="more_send_single_video_fail">Failed to send single video file</string>
    <string name="more_show_single_video_success">Succeed to play single video file</string>
    <string name="more_show_single_video_fail">Failed to send single video file</string>
    <string name="more_send_videos_success">Succeed to send video carousel</string>
    <string name="more_show_videos_success">Succeed to play video carousel</string>
    <string name="more_show_videos_fail">Failed to play video carousel</string>
    <string name="more_sub_size">Judging the secondary screen size (2)</string>
    <string name="more_sub_cach_manager">Customer screen cache management (4)</string>
    <string name="more_other">Others (5)</string>
    <string name="divide">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   end   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</string>
    <string name="more_sub">Interact with customer screen</string>
    <string name="more_show_thevideo">Play a video</string>
    <string name="more_prints">Print</string>
    <string name="more_camera">Camera</string>
    <string name="more_camera_code">Scan by camera</string>
    <string name="more_scale">Electronic scale</string>
    <string name="more_get_weight">Take weight</string>
    <string name="more_peele">Peeled</string>
    <string name="more_clear">Clear</string>
    <string name="units_tin">Can</string>
    <string name="units_kg">KG</string>
    <string name="units_each">Each</string>
    <string name="units_bag">bag</string>
    <string name="units_money">$</string>
    <string name="units_money_units">$</string>
    <string name="goods_juice">Juice</string>
    <string name="goods_fruit">Fruit</string>
    <string name="goods_snacks">Snacks</string>
    <string name="goods_vegetables">Vegetables</string>
    <string name="goods_apple">Apple</string>
    <string name="goods_pear">Pear</string>
    <string name="goods_banana">Banana</string>
    <string name="goods_pitaya">Pitaya</string>
    <string name="goods_coke">Coke</string>
    <string name="goods_sprite">Sprite</string>
    <string name="goods_red_bull">Red Bull</string>
    <string name="goods_orange_juice">Orange juice</string>
    <string name="goods_gift">Gift</string>
    <string name="goods_sc_1">猕猴桃</string>
    <string name="goods_sc_2">菠萝</string>
    <string name="goods_sc_3">柠檬</string>
    <string name="goods_sc_4">橘子</string>
    <string name="goods_scs_1">辣椒</string>
    <string name="goods_scs_2">萝卜</string>
    <string name="goods_scs_3">包菜</string>
    <string name="goods_scs_4">紫甘蓝</string>
    <string name="goods_1">可口可乐零度</string>
    <string name="goods_2">雪碧零卡</string>
    <string name="goods_3">统一绿茶</string>
    <string name="goods_4">三得利乌龙茶</string>
    <string name="goods_5">百草味东北松子</string>
    <string name="goods_6">百草味话梅瓜子</string>
    <string name="goods_7">五谷味梳打饼干</string>
    <string name="goods_8">海苔味梳打饼干</string>
    <string name="tips_fruit_apple">Put the apple on the electronic scale</string>
    <string name="tips_fruit_pear">Put the pear on the electronic scale</string>
    <string name="tips_fruit_banana">Put the banana on the electronic scale</string>
    <string name="tips_fruit_pitaya">Put the pitaya on electronic scale</string>
    <string name="tips_fruit_please">Put the </string>
    <string name="tips_fruit_put"> on electronic scale</string>
    <string name="tips_pay_money">Please collect cash</string>
    <string name="tips_pay_qrcode">Please scanning collection code</string>
    <string name="tips_bye">Thank you</string>
    <string name="tips_cancel">Cancel</string>
    <string name="tips_confirm">OK</string>
    <string name="tips_success">Success</string>
    <string name="tips_yes">确定</string>
    <string name="tips_fail">Fail</string>
    <string name="tips_net_fail">Network connection failed</string>
    <string name="tips_exit">Press again to exit</string>
    <string name="tips_pay_real">(本设备为真实人脸支付，扣款金额为0.01元)</string>
    <string name="fruit_unit_price">Unit price (dollar / kilogram)</string>
    <string name="fruit_kg">Weight (kg)</string>
    <string name="fruit_total">Subtotal (dollar)</string>
    <string name="fruit_add">Add</string>
    <string name="pay_money">Cash</string>
    <string name="pay_ali_wx">WeChat Pay or Alipay</string>
    <string name="pay_face">Face pay</string>
    <string name="pay_face_tips">Close your face to the camera and start paying</string>
    <string name="pay_face_tips_pay">Tips: Face pay is a real charge</string>
    <string name="pay_noface">No available external equipment</string>
    <string name="pay_noface_change">Check the connection or choose other payment methods</string>
    <string name="pay_fail_tips">Please pay again or choose other means</string>
    <string name="pay_need_money">Receivables: </string>
    <string name="pay_give_money">Payable: </string>
    <string name="pay_confirm">OK</string>
    <string name="pay_confirm_true">Receivables：</string>
    <string name="pay_pay_true">Already paid: </string>
    <string name="pay_paying">Paying...</string>
    <string name="pay_repay">Try again</string>
    <string name="pay_get_moeny">Pay now</string>
    <string name="pay_fail">Payment failed!</string>
    <string name="pay_pay_moeny">Payment amount:</string>
    <string name="pay_total_moeny">Total：</string>
    <string name="menus_title">Cashier Demo</string>
    <string name="menus_title1">Sunmi cashier Demo</string>
    <string name="menus_title2">Cashier of SunmiMilkTea</string>
    <string name="menus_title3">Welcome to SunmiMilkTea</string>
    <string name="menus_number">SN</string>
    <string name="menus_unit_price">Price</string>
    <string name="menus_goods_name">Name</string>
    <string name="menus_more">More</string>
    <string name="shop_car">Cart</string>
    <string name="shop_car_nothing">There are no items in your cart!</string>
    <string name="goods_nothing">There are nothing items in your cart!</string>
    <string name="shop_car_clear">Empty</string>
    <string name="shop_car_total">Total</string>
    <string name="shop_car_offer">Discount</string>
    <string name="shop_car_number">Number</string>
    <string name="shop_car_code">ID</string>
    <string name="shop_car_receivable">receivable</string>
    <string name="shop_car_goods_name">Name</string>
    <string name="shop_car_unit_money">Amount</string>
    <string name="shop_car_totle2">Total:</string>
    <string name="shop_car_go_pay">Pay now</string>
    <string name="tea_goods1">Signboard milk tea</string>
    <string name="tea_goods2">Yuanyang duck milk tea</string>
    <string name="tea_goods3">Cappuccino</string>
    <string name="tea_goods4">Kumquat juice</string>
    <string name="tea_goods5">Papaya juice</string>
    <string name="tea_goods6">Double skin milk</string>
    <string name="tea_goods7">Latte</string>
    <string name="tea_goods8">Lemon juice</string>
    <string name="tea_goods9">Apple Juice</string>
</resources>