<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lly_bg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:text="@string/shop_car_code"
            android:textColor="#212121"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:text="@string/shop_car_goods_name"
            android:textColor="#212121"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvMoney"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:text="@string/shop_car_unit_money"
            android:textColor="#212121"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>
