<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#E8EDEF"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/menus_title"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/main_btn_more"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:text="@string/menus_more"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1.5dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:src="@drawable/drink" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:alpha="0.7"
                android:gravity="center_vertical"
                android:text="@string/goods_juice"
                android:textColor="#000000"
                android:textSize="11sp" />
        </LinearLayout>

        <com.sunmi.sunmit2demo.view.MyGridView
            android:id="@+id/gv_drinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:columnWidth="10dp"
            android:numColumns="4"></com.sunmi.sunmit2demo.view.MyGridView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:src="@drawable/fruit" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:alpha="0.7"
                android:gravity="center_vertical"
                android:text="@string/goods_fruit"
                android:textColor="#000000"
                android:textSize="11sp" />
        </LinearLayout>

        <GridView
            android:id="@+id/gv_fruits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:columnWidth="10dp"
            android:numColumns="4"></GridView>

    </LinearLayout>

    <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="#CFD3D4" />


    <FrameLayout
        android:layout_width="270dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lly_shopcar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:background="#F1F5F6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:alpha="0.7"
                    android:gravity="center_vertical"
                    android:text="@string/shop_car"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/main_btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/shop_car_clear"
                    android:textColor="#000000"
                    android:textSize="14sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#E9EBEC" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#F1F5F6"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:text="@string/shop_car_code"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:text="@string/shop_car_goods_name"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:text="@string/shop_car_unit_money"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#E9EBEC" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#ffffff">

                <ListView
                    android:id="@+id/lv_menus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@null"
                    android:listSelector="@null"></ListView>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#E9EBEC" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="49dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/shop_car_totle2"
                    android:textColor="#212121"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/main_tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="¥0.00"
                    android:textColor="#FC5436"
                    android:textSize="18sp" />


            </RelativeLayout>

            <Button
                android:id="@+id/main_btn_pay"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#FC5436"
                android:gravity="center"
                android:text="@string/shop_car_go_pay"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rtl_empty_shopcar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/iv_empty_shopcar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/emptyshopcar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_empty_shopcar"
                android:layout_marginTop="12dp"
                android:alpha="0.7"
                android:gravity="center"
                android:text="@string/shop_car_nothing"
                android:textColor="#000000"
                android:textSize="12sp" />
        </RelativeLayout>
    </FrameLayout>


</LinearLayout>
